<resources>
    <string name="app_name">BuscandoMiMascota</string>
    <!-- Activity Contacto -->
    <string name="title_contacto">Contacto</string>
    <string name="name_contact">Nombre</string>
    <string name="email_contact">E-mail</string>
    <string name="msj_contact">Mensaje</string>
    <string name="btn_send">Enviar Comentario</string>
    <!-- Activity Acerca de -->
    <string name="title_bio">Acerca de:</string>
    <string name="texto_bio">Desarrollado Por: MisMascotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- cardview_perfil -->
    <string name="descripcionImgCardView">Imagen Mascota</string>
    <!-- -->
    <string name="nombreMascota">Facha</string>
    <string name="plikes">0 Likes</string>

    <!-- activity_registro_usuarios -->
    <string name="registrarse">Registro de usuario</string>
    <string name="VolverLogin">Login</string>
    <string name="registro">Registro de Usuario</string>
    <string name="login">LOGIN</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefono">Teléfono</string>
    <string name="cc">Confirmar contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="nombre_del_usuario">Nombre de usuario</string>
    <string name="error_invalid_password">Ingrese una contraseña mínima de 6 caracteres</string>
    <string name="error_invalid_password2">Ingrese una contraseña mínima de 6 caracteres</string>
    <string name="contrase_a">contraseña</string>
    <string name="error_invalid_phone">teléfono inválido</string>
    <string name="phone_error2">El número introducido no es válido!!!</string>
    <string name="phone_error3">Ha ingresado un número correcto!!!</string>


    <!-- activity_login -->
    <string name="enter_email">Correo Electronico</string>
    <string name="enter_contraseña">Contraseña</string>
    <string name="image_logo">Logo Footprints</string>
    <string name="link_registrarse">Registrarse</string>
    <string name="link_olvide_mi_contraseña">Olvide mi Contraseña</string>
    <string name="button_login">Login</string>
    <string name="DescripcionFab">DescriptionFab</string>
    <string name="mascotagenerica">Mascota Generica</string>
    <string name="title_activity_demonstracion_utilidad_enviar_j_s_o_n">
        DemonstracionUtilidadEnviarJSON
    </string>

    <!-- ListadoMascotas -->

    <string name="edscripcion_imagen">Imagen Mascota</string>
    <string name="nombre_mascota">Nombre Mascota</string>
    <string name="ultima_posicion">Ultima vez visto en...</string>
    <string name="fecha_y_hora">Fecha</string>
    <string name="genero">Genero</string>
    <string name="raza">Raza</string>
    <string name="color_mascota">Color</string>
    <string name="especie">Especie</string>
    <string name="edad">Edad</string>
    <string name="tamano">Tamaño</string>
    <string name="descripcion">Descripcion</string>
    <string name="recompenza">Recompensa $</string>
    <string name="mail">Usuario</string>
    <string name="editar_mascota">Editar</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="todo">todo</string>


</resources>