<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    android:layout_alignParentTop="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.499"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.154"
    tools:context=".RegistroUsuarios"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal|top|center_vertical"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivLogoFootprints"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/logo_footprints" /><![CDATA[











    "
        tools:ignore="OnClick" />



































    ]]>

    <EditText
        android:id="@+id/nombre_usuario"
        style="@android:style/Widget.Material.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:drawableStart="@drawable/baseline_perm_identity_black_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nombre_del_usuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/round_mail_black_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_usuario"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_lock_black_24dp"
        android:drawableEnd="@drawable/visible"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/confContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_lock_black_24dp"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/cc"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:drawableStart="@drawable/baseline_phone_black_24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confContrasena"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/confirmar"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/design_default_color_background"
        android:onClick="confirmar"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefono"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/login"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/design_default_color_background"
        android:gravity="center_horizontal"
        android:text="@string/button_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,OnClick" />
</androidx.constraintlayout.widget.ConstraintLayout>