<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ImvMascota"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/edscripcion_imagen"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/TvDescripcionMascota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImvMascota"
        app:layout_constraintVertical_bias="0.205"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/TvNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nombre Mascota"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="220dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TvFechaYHora"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:text="fecha y hora"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="251dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TvUltimaPosicionConocida"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:layout_weight="1"
            android:ems="10"
            android:text="Ultima vez visto en.."
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="279dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/TvDescripcionMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3" />

    <TableLayout
        android:id="@+id/layUsuarioRecompenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvDescripcionMascota">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mail"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recompenza"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TVusuario"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:ems="10"
                android:text="usuario"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TvRecompensaMascota"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="recompensa"
                android:textAlignment="center"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TableLayout
        android:id="@+id/layAtributosMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layUsuarioRecompenza">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTituloEspecie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/especie"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTituloGenero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/raza"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTituloRaza"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genero"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TvEspecieMascota"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TvRazaMascota"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TvGeneroMascota"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_mascota"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tamano"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edad"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TvColorMascota"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TvTamanoMascota"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TvEdadMascota"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="italic" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>